fix: test scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -257,7 +257,7 @@ input[type="checkbox"].custom-check:checked::after {
 
 /* Chrome, Safari, Edge */
 .boardgame-list::-webkit-scrollbar {
-  width: 40px;
+  width: 15px;
 }
 
 .boardgame-list::-webkit-scrollbar-track {
@@ -268,6 +268,8 @@ input[type="checkbox"].custom-check:checked::after {
 .boardgame-list::-webkit-scrollbar-thumb {
   background: #3AC3DF;
   border-radius: 10px;
+  min-height: 40px; /*Altura mínima do thumb */
+
 }
 
 .boardgame-list::-webkit-scrollbar-thumb:hover {
